concord_examples/tests/ui/old_route_host_removed.stderr
error: `route.host` was removed in v5 rate-limit keys; use `host`
 --> tests/ui/old_route_host_removed.rs:8:36
  |
8 |             bucket application by [route.host] {
  |                                    ^^^^^
